--- a/style.css
+++ b/style.css
@@ -71,9 +71,7 @@ input {
    border-radius: 5px;
 }
 
-.real-login:focus,
-.real-login:active {
-}
+
 
 .content {
    border-bottom-left-radius: 5px;
@@ -91,7 +89,7 @@ input {
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
-   box-shadow: 0px 8px 16px 0px #212529;
+   box-shadow: 0px 8px 16px 0px #0c0e0f;
 
    border-radius: 5px;
    z-index: 1;
@@ -110,15 +108,13 @@ input {
    margin-top: 5px;
 }
 
-.list-btn {
-   color: #212529;
-   background: #f9f9f9;
+input{
+   width: 100%;
 }
 
-.list-btn:hover {
-   color: #f9f9f9;
-   background: #212529;
-}
+
+
+
 
 #admin {
    border-bottom-right-radius: 5px;
